[tool.poetry]
name = "hog_apitest"
version = "0.1.0"
description = ""
authors = ["susu <31542614@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
coverage = "^4.5.4"
coveralls = "^1.8.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
